[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Sprites/FishingAnimations/h-fish-button.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/FishingAnimations/fishing.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/FishingAnimations/n-fish-button.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/FishingAnimations/p-fish-button.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Fishing.gd" type="Script" id=5]
[ext_resource path="res://Scenes/BackButton.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Cast"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "in_animation_sound"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Catch"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24, 25, 26, 27 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "in_animation_sound"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "CatchIdle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 28, 29 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Fish"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 14, 12 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "in_animation_sound"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "FishingIdle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 12, 11 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Uncast"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 8, 7, 6, 5, 4, 3, 2, 1 ]
}

[node name="Fishing" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="FishingRod" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
hframes = 30
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="FishingRod"]
autoplay = "Idle"
anims/Cast = SubResource( 1 )
anims/Catch = SubResource( 2 )
anims/CatchIdle = SubResource( 3 )
anims/Fish = SubResource( 4 )
anims/FishingIdle = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/RESET = SubResource( 7 )
anims/Uncast = SubResource( 8 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="FishButton" type="TextureButton" parent="Margin"]
margin_left = 48.0
margin_top = 48.0
margin_right = 56.0
margin_bottom = 56.0
rect_min_size = Vector2( 8, 8 )
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 4 )
expand = true

[node name="BackButton" parent="Margin" instance=ExtResource( 6 )]
margin_left = 8.0
margin_top = 48.0
margin_right = 16.0
margin_bottom = 56.0
size_flags_vertical = 10
next_scene = "Town1Scene"

[connection signal="animation_finished" from="FishingRod/AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="pressed" from="Margin/FishButton" to="." method="_on_FishButton_pressed"]
